switched to prod build

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="main.js"></script>
+<!doctype html> <html> <head> <meta charset=UTF-8> <title>TodoMVC</title> </head> <body> <script type="text/javascript" src="main.js"></script></body> </html>
